bug squash

--- a/css/queries.css
+++ b/css/queries.css
@@ -25,7 +25,7 @@
           content:"";
           background-color: #cc2333;
         }
-    .navbar-nav {
+    #top-nav {
         border: solid 1px;
         border-radius: 5px;
         background: #fff;
@@ -48,4 +48,10 @@
 }
 
 /* Small phones - tablets: from 481 to 767px */
-@media only screen and (max-width: 767px) {}
+@media only screen and (max-width: 767px) {
+
+    .contact-sec {
+        margin-top: 0;
+        padding-top: 0;
+    }
+}
